now with favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.min.css" integrity="sha512-xiunq9hpKsIcz42zt0o2vCo34xV0j6Ny8hgEylN3XBglZDtTZ2nwnqF/Z/TTCc18sGdvCjbFInNd++6q3J0N6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@8.5.1/themes/reset-min.css" integrity="sha256-KvFgFCzgqSErAPu6y9gz/AhZAvzK48VJASu3DpNLCEQ=" crossorigin="anonymous">
     <style>
@@ -16,7 +17,13 @@
     <div class="container" style="padding-top:4rem">
       <div class="row">
         <div class="column">
-          <h1>Plan Comptable Général</h1>
+          <h1>
+            <img src="favicon.ico" alt="PCG" style="width: 1.4em; height: 1.4em; margin-right: 0.4em; vertical-align: middle; border-radius: 20%" />
+            Plan Comptable Général
+          </h1>
+          <section id="introduction">
+            <p>Le Plan Comptable Général (PCG) est la base de la comptabilité française. Retrouvez ici toutes les classifications comptables de manière simplifiée et accessible.</p>
+          </section>
         </div>
       </div>
       <div class="row">
